tests/init/neg/inner-first.scala
class A:
  class B:
    println(this)           // error
    val n = 10
    def foo() = println(m)
  new B
  val m = 20
